# PaulXStretch

./: .gitignore  CMakeLists.txt  README.md  paulstretchplugin.jucer
Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RenderSettingsComponent.h  envelope_component.h  jcdp_envelope.h  ps3_BufferingAudioSource.h
Source/PS_Source/: BinauralBeats.h  PaulStretchControl.h  Stretch.h  StretchSource.h  globals.h
Source/PS_Source/Input/: AInputS.h  InputS.h
